--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Déclaration de la permission pour l'accès à Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,16 +14,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PorjetMobile2025"
-        tools:targetApi="31">
+        tools:targetApi="34">
+
+        <!-- Activité principale (MainActivity) -->
         <activity
             android:name="com.example.porjetmobile2025.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Activité de connexion (SignInActivity) -->
+        <activity
+            android:name="com.example.porjetmobile2025.View.SignInActivity"
+            android:exported="true">
+            <!-- Vous pouvez ajouter un intent-filter ici si nécessaire -->
+        </activity>
+
+        <!-- Activité d'accueil (AccueilActivity) -->
+        <activity
+            android:name="com.example.porjetmobile2025.View.AccueilActivity"
+            android:exported="true">
+            <!-- Vous pouvez ajouter un intent-filter ici si nécessaire -->
+        </activity>
+        <activity
+            android:name="com.example.porjetmobile2025.View.SignUpActivity"
+            android:exported="true">
+        </activity>
+
+        <!-- Activité d'inscription (SignUpActivity) -->
+
+
     </application>
 
 </manifest>
