--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <!-- Déclaration de la permission pour l'accès à Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +18,6 @@
         android:theme="@style/Theme.PorjetMobile2025"
         tools:targetApi="34">
 
-        <!-- Activité principale (MainActivity) -->
         <activity
             android:name="com.example.porjetmobile2025.MainActivity"
             android:exported="true">
@@ -26,26 +27,33 @@
             </intent-filter>
         </activity>
 
-        <!-- Activité de connexion (SignInActivity) -->
+        <activity
+            android:name="com.example.porjetmobile2025.View.AccueilActivity"
+            android:exported="true" />
+
+        <activity android:name=".View.MyDoctorActivity" />
+        <activity android:name=".View.AppointmentActivity"></activity>
+        <activity android:name=".View.MedicamentActivity"></activity>
+        <activity android:name=".View.CalculatortwoActivity"></activity>
+        <activity android:name=".View.CalculActivity"></activity>
+        <activity android:name="com.example.porjetmobile2025.View.MyAppoiNotifActivity" />
+
+
         <activity
             android:name="com.example.porjetmobile2025.View.SignInActivity"
             android:exported="true">
             <!-- Vous pouvez ajouter un intent-filter ici si nécessaire -->
         </activity>
 
-        <!-- Activité d'accueil (AccueilActivity) -->
-        <activity
-            android:name="com.example.porjetmobile2025.View.AccueilActivity"
-            android:exported="true">
-            <!-- Vous pouvez ajouter un intent-filter ici si nécessaire -->
-        </activity>
+
         <activity
             android:name="com.example.porjetmobile2025.View.SignUpActivity"
             android:exported="true">
         </activity>
 
         <!-- Activité d'inscription (SignUpActivity) -->
-
+        <activity android:name="com.example.porjetmobile2025.View.AddPostActivity">
+        </activity>
 
     </application>
 
